fix overflow blockquote stream
change word-break to wrap-wrap

	modified:   app/assets/stylesheets/stream_element.scss

remove useless word-wrap

global prevent for overflow

global overflow fix

Remove useless word-wrap

	modified:   app/assets/stylesheets/conversations.scss
	modified:   app/assets/stylesheets/new_styles/_base.scss
	modified:   app/assets/stylesheets/new_styles/_code.scss
	modified:   app/assets/stylesheets/single-post-view.scss
	modified:   app/assets/stylesheets/stream_element.scss

indent

--- a/app/assets/stylesheets/new_styles/_base.scss
+++ b/app/assets/stylesheets/new_styles/_base.scss
@@ -14,6 +14,14 @@ body {
   }
 }
 
+/* Overflow */
+h1, h2, h3, h4, h5, h6,
+p,
+blockquote,
+code,
+pre { word-wrap: break-word; }
+a.tag { word-break: break-all; }
+
 /* new link color */
 $link-blue : rgb(42,156,235);
 a { color : $link-blue  }
