--- a/app/assets/stylesheets/new_styles/_code.scss
+++ b/app/assets/stylesheets/new_styles/_code.scss
@@ -1,7 +1,4 @@
-code {
-  white-space: normal;
-  word-wrap: break-word;
-}
+code { white-space: normal; }
 
 pre {
   overflow-x: auto;
